--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "bootstrap": "lerna bootstrap",
     "start": "lerna run start --parallel",
     "build": "lerna run build --parallel",
-    "test": "lerna run test --parallel"
+    "test": "lerna run test --stream"
   },
   "devDependencies": {
     "lerna": "^3.6.0"
