--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,10 @@
 {
-  "packages": ["packages/*"],
   "version": "0.0.0",
   "npmClient": "yarn",
+  "useWorkspaces": true,
   "command": {
     "publish": {
-      "ignoreChanges": ["ignored-file", "*.md"]
+      "ignoreChanges": ["*.md"]
     }
   }
 }
