--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "music-monkey-host",
-  "version": "0.1.0",
+  "name": "host",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local' react-scripts start",
@@ -54,65 +54,5 @@
     "sweetalert2": "^7.29.2",
     "sweetalert2-react-content": "^1.0.1",
     "uuid": "3.3.2"
-  },
-  "devDependencies": {
-    "@material-ui/codemod": "^1.0.0-rc.0",
-    "@types/autosuggest-highlight": "^3.1.0",
-    "@types/classnames": "^2.2.3",
-    "@types/dropzone": "^5.0.2",
-    "@types/enzyme": "^3.1.15",
-    "@types/enzyme-adapter-react-16": "^1.0.2",
-    "@types/google-map-react": "^0.23.10",
-    "@types/history": "^4.7.2",
-    "@types/jest": "23.3.10",
-    "@types/jquery": "^3.3.22",
-    "@types/jss": "^9.5.7",
-    "@types/lodash": "^4.14.119",
-    "@types/node": "10.12.12",
-    "@types/nuka-carousel": "^4.4.0",
-    "@types/prop-types": "^15.5.2",
-    "@types/pusher-js": "^4.2.0",
-    "@types/query-string": "^6.1.0",
-    "@types/react": "^16.7.17",
-    "@types/react-avatar-editor": "^10.3.2",
-    "@types/react-beautiful-dnd": "^7.1.1",
-    "@types/react-copy-to-clipboard": "^4.2.5",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-jss": "^8.6.0",
-    "@types/react-places-autocomplete": "^6.1.1",
-    "@types/react-redux": "^6.0.10",
-    "@types/react-router": "^4.4.1",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-select": "^2.0.8",
-    "@types/react-swipeable-views": "^0.12.1",
-    "@types/react-test-renderer": "^16.0.3",
-    "@types/recharts": "^1.1.1",
-    "@types/redux-auth-wrapper": "^2.0.9",
-    "@types/redux-immutable-state-invariant": "^2.1.0",
-    "@types/redux-logger": "^3.0.6",
-    "@types/sinon": "^5.0.7",
-    "@types/uuid": "^3.4.4",
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "husky": "^1.2.0",
-    "node-sass": "^4.11.0",
-    "react-scripts": "2.1.1",
-    "redux-immutable-state-invariant": "^2.1.0",
-    "sinon": "^7.1.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "3.2.2"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
   }
 }
