--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -53,6 +53,7 @@
     "spotify-uri": "^1.0.0",
     "sweetalert2": "^7.29.2",
     "sweetalert2-react-content": "^1.0.1",
-    "uuid": "3.3.2"
+    "uuid": "3.3.2",
+    "music-monkey-client": "^0.0.1"
   }
 }
