--- a/package.json
+++ b/package.json
@@ -9,6 +9,40 @@
     "lint": "lerna run lint --stream",
     "clean": "lerna clean"
   },
+  "dependencies": {
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "axios-extensions": "^3.0.4",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.0.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.1",
+    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.6.2",
+    "pusher-js": "^4.2.2",
+    "query-string": "^6.1.0",
+    "react": "16.7.0-alpha.2",
+    "react-autosuggest": "^9.3.4",
+    "react-avatar-editor": "^11.0.4",
+    "react-cookie": "^3.0.8",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-dom": "16.7.0-alpha.2",
+
+    "react-jss": "^8.6.1",
+    "react-loading": "^2.0.2",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-swipeable-views": "^0.13.0",
+    "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.0.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "sweetalert2": "^7.29.2",
+    "sweetalert2-react-content": "^1.0.1",
+    "uuid": "3.3.2"
+  },
   "devDependencies": {
     "lerna": "^3.6.0",
     "@material-ui/codemod": "^1.0.0-rc.0",
