--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "start": "lerna run start --parallel",
+    "start:local": "lerna run start:local --parallel",
     "build": "lerna run build --parallel",
     "test": "lerna run test --stream",
     "lint": "lerna run lint --stream",
