--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "prop-types": "^15.6.2",
     "pusher-js": "^4.2.2",
     "query-string": "^6.1.0",
-    "react": "16.7.0",
+    "react": "16.7.0-alpha.2",
     "react-autosuggest": "^9.3.4",
     "react-avatar-editor": "^11.0.4",
     "react-cookie": "^3.0.8",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.7.0",
-
+    "react-dom": "16.7.0-alpha.2",
     "react-jss": "^8.6.1",
     "react-loading": "^2.0.2",
     "react-redux": "^6.0.0",
@@ -45,7 +44,6 @@
     "uuid": "3.3.2"
   },
   "devDependencies": {
-    "lerna": "^3.6.0",
     "@material-ui/codemod": "^1.0.0-rc.0",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/classnames": "^2.2.3",
@@ -59,6 +57,7 @@
     "@types/jquery": "^3.3.22",
     "@types/jss": "^9.5.7",
     "@types/lodash": "^4.14.119",
+    "@types/markerclustererplus": "^2.1.33",
     "@types/node": "10.12.18",
     "@types/nuka-carousel": "^4.4.0",
     "@types/prop-types": "^15.5.2",
@@ -88,14 +87,15 @@
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.7.0",
     "husky": "^1.2.0",
-    "sinon": "^7.1.1",
+    "lerna": "^3.6.0",
+    "node-sass": "^4.11.0",
     "react-scripts": "2.1.1",
     "redux-immutable-state-invariant": "^2.1.0",
-    "node-sass": "^4.11.0",
+    "sinon": "^7.1.1",
     "tslint": "^5.11.0",
-    "typescript": "3.2.2",
     "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "typescript": "3.2.2"
   },
   "browserslist": [
     ">0.2%",
