Updated yarn lock

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "redux-auth-wrapper": "^2.0.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
+    "snyk": "^1.161.1",
     "sweetalert2": "^7.29.2",
     "sweetalert2-react-content": "^1.0.1",
-    "uuid": "3.3.2",
-    "snyk": "^1.161.1"
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@material-ui/codemod": "^1.0.0-rc.0",
