--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "start:local": "lerna run start:local --parallel",
     "build": "lerna run build --parallel",
     "test": "lerna run test --stream",
-    "lint": "lerna run lint --stream",
-    "clean": "lerna clean",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "clean": "lerna clean"
   },
   "dependencies": {
     "@material-ui/core": "^3.6.1",
@@ -25,12 +22,12 @@
     "prop-types": "^15.6.2",
     "pusher-js": "^4.2.2",
     "query-string": "^6.1.0",
-    "react": "16.7.0-alpha.2",
+    "react": "16.8.6",
     "react-autosuggest": "^9.3.4",
     "react-avatar-editor": "^11.0.4",
     "react-cookie": "^3.0.8",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.7.0-alpha.2",
+    "react-dom": "16.8.6",
     "react-jss": "^8.6.1",
     "react-loading": "^2.0.2",
     "react-redux": "^6.0.0",
@@ -41,10 +38,12 @@
     "redux-auth-wrapper": "^2.0.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "snyk": "^1.161.1",
     "sweetalert2": "^7.29.2",
     "sweetalert2-react-content": "^1.0.1",
-    "uuid": "3.3.2"
+    "uuid": "3.3.2",
+    "guest": "file:packages/guest",
+    "host": "file:packages/host",
+    "music-monkey-client": "file:libs/music-monkey-client"
   },
   "devDependencies": {
     "@material-ui/codemod": "^1.0.0-rc.0",
@@ -56,22 +55,22 @@
     "@types/google-map-react": "^0.23.10",
     "@types/googlemaps": "^3.30.16",
     "@types/history": "^4.7.2",
-    "@types/jest": "24.0.11",
+    "@types/jest": "24.0.12",
     "@types/jquery": "^3.3.22",
     "@types/jss": "^9.5.7",
     "@types/lodash": "^4.14.119",
     "@types/markerclustererplus": "^2.1.33",
-    "@types/node": "11.13.0",
+    "@types/node": "12.0.0",
     "@types/nuka-carousel": "^4.4.0",
     "@types/prop-types": "^15.5.2",
     "@types/pusher-js": "^4.2.0",
     "@types/query-string": "^6.1.0",
-    "@types/react": "^16.7.17",
+    "@types/react": "^16.8.17",
     "@types/react-autosuggest": "^9.3.4",
     "@types/react-avatar-editor": "^10.3.2",
     "@types/react-beautiful-dnd": "^10.0.0",
     "@types/react-copy-to-clipboard": "^4.2.5",
-    "@types/react-dom": "^16.0.11",
+    "@types/react-dom": "^16.8.4",
     "@types/react-jss": "^8.6.0",
     "@types/react-places-autocomplete": "^7.2.1",
     "@types/react-redux": "^6.0.10",
@@ -89,31 +88,27 @@
     "@types/yup": "^0.26.2",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.7.0",
-    "husky": "^1.2.0",
     "lerna": "^3.6.0",
     "node-sass": "^4.11.0",
-    "react-scripts": "2.1.2",
+    "react-scripts": "3.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "sinon": "^7.1.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "3.3.3333"
+    "typescript": "3.4.5"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "workspaces": [
-    "packages/*",
-    "libs/*"
-  ],
-  "snyk": true
+    "libs/*",
+    "packages/*"
+  ]
 }
