--- a/packages/guest/package.json
+++ b/packages/guest/package.json
@@ -6,14 +6,13 @@
     "start": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local' react-scripts start",
     "start:local": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local-dev' REACT_APP_MM_API_URL='http://localhost:8080/api/v1' react-scripts start",
     "build": "NODE_ENV='production' react-scripts build",
-    "lint": "tslint --fix src/**/*.ts{,x}",
     "test": "react-scripts  test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "dependencies": {
     "formik": "^1.3.2",
+    "music-monkey-client": "file:../../libs/music-monkey-client",
     "react-google-maps": "^9.4.5",
-    "yup": "^0.26.5",
-    "music-monkey-client": "^0.0.1"
+    "yup": "^0.26.5"
   }
 }
