--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -6,7 +6,6 @@
     "start": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local' react-scripts start",
     "start:local": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local-dev' REACT_APP_MM_API_URL='http://localhost:8080/api/v1' react-scripts start",
     "build": "NODE_ENV='production' react-scripts build",
-    "lint": "tslint --fix src/**/*.ts{,x}",
     "test": "react-scripts  test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -16,6 +15,7 @@
     "aws-sdk": "^2.369.0",
     "google-map-react": "^1.1.1",
     "material-ui-pickers": "^2.0.4",
+    "music-monkey-client": "file:../../libs/music-monkey-client",
     "nuka-carousel": "^4.4.3",
     "react-beautiful-dnd": "^10.0.2",
     "react-dropzone": "^9.0.0",
@@ -24,7 +24,6 @@
     "react-select": "^2.1.1",
     "recharts": "^1.4.1",
     "spotify-uri": "^1.0.0",
-    "uuid": "3.3.2",
-    "music-monkey-client": "^0.0.1"
+    "uuid": "3.3.2"
   }
 }
