Removed most WithStyles from guest code

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "clean": "lerna clean"
   },
   "dependencies": {
-    "@material-ui/core": "^3.6.1",
-    "@material-ui/icons": "^3.0.1",
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
     "axios": "^0.18.0",
     "axios-extensions": "^3.0.4",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.0.0",
+    "connected-react-router": "6.4.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.1",
     "npm-run-all": "^4.1.5",
@@ -61,10 +61,8 @@
     "@types/lodash": "^4.14.119",
     "@types/markerclustererplus": "^2.1.33",
     "@types/node": "12.0.0",
-    "@types/nuka-carousel": "^4.4.0",
     "@types/prop-types": "^15.5.2",
     "@types/pusher-js": "^4.2.0",
-    "@types/query-string": "^6.1.0",
     "@types/react": "^16.8.17",
     "@types/react-autosuggest": "^9.3.4",
     "@types/react-avatar-editor": "^10.3.2",
