--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -1,39 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "build/dist",
-    "target": "es5",
-    "allowJs": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "jsx": "preserve",
-    "downlevelIteration": true,
-    "keyofStringsOnly": true,
-    "sourceMap": true,
-    "rootDir": "src",
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "importHelpers": true,
-    "skipLibCheck": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "outDir": "build/dist"
   },
-  "exclude": [
-    "src/setupTests.ts"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["./src/setupTests.ts"],
+  "include": ["./src"]
 }
