--- a/packages/guest/package.json
+++ b/packages/guest/package.json
@@ -7,7 +7,7 @@
     "start:local": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local-dev' REACT_APP_MM_API_URL='http://localhost:8080/api/v1' react-scripts start",
     "build": "NODE_ENV='production' react-scripts build",
     "test": "react-scripts  test --env=jsdom --coverage",
-    "eject": "react-scripts eject"
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
     "formik": "^1.3.2",
