--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
+    "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.19.0",
     "axios-extensions": "^3.0.4",
     "classnames": "^2.2.6",
@@ -43,6 +44,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "source-map-explorer": "^1.8.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^8.11.1",
     "sweetalert2-react-content": "^1.0.1",
     "uuid": "3.3.2"
