Moved images to own package

--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "build/dist"
   },
-  "exclude": ["src/setupTests.ts"],
-  "include": ["src"]
+  "exclude": ["./src/setupTests.ts"],
+  "include": ["./src"]
 }
