Bunch of tidy up

--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "build/dist"
+    "outDir": "build/dist",
+    "baseUrl": "./src"
   },
   "exclude": ["./src/setupTests.ts"],
   "include": ["./src"]
