--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "start": "lerna run start --parallel",
+    "start:host": "lerna run --scope host start --stream",
     "start:local": "lerna run start:local --parallel",
     "build": "lerna run build --parallel",
     "test": "lerna run test --stream --",
@@ -92,10 +93,10 @@
     "enzyme-adapter-react-16": "^1.7.0",
     "lerna": "^3.6.0",
     "node-sass": "^4.11.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.1.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "sinon": "^7.1.1",
-    "typescript": "3.5.3"
+    "typescript": "3.6.3"
   },
   "browserslist": {
     "production": [
