Migrated to mateiral-ui 4

--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "analyze": "lerna run analyze --parallel"
   },
   "dependencies": {
-    "@material-ui/core": "3.9.3",
-    "@material-ui/icons": "3.0.2",
-    "@sweetalert/with-react": "^0.1.1",
-    "axios": "^0.19.0",
-    "axios-extensions": "^3.0.4",
-    "classnames": "^2.2.6",
+    "@material-ui/core": "4.4.3",
+    "@material-ui/icons": "4.4.3",
+    "@material-ui/styles": "^4.4.3",
+    "@sweetalert/with-react": "0.1.1",
+    "axios": "0.19.0",
+    "axios-extensions": "3.0.6",
+    "classnames": "2.2.6",
     "connected-react-router": "6.5.2",
     "guest": "file:packages/guest",
     "host": "file:packages/host",
-    "lodash": "^4.17.11",
-    "moment": "^2.22.1",
+    "lodash": "4.17.11",
+    "moment": "2.24.0",
     "music-monkey-client": "file:libs/music-monkey-client",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "prop-types": "^15.6.2",
-    "pusher-js": "^4.2.2",
+    "pusher-js": "5.0.2",
     "query-string": "^6.1.0",
-    "react": "16.8.6",
+    "react": "16.10.1",
     "react-autosuggest": "^9.3.4",
     "react-avatar-editor": "^11.0.4",
     "react-cookie": "^4.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "16.8.6",
-    "react-jss": "^8.6.1",
+    "react-dom": "16.10.1",
     "react-loading": "^2.0.2",
     "react-redux": "^6.0.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react-router": "5.1.1",
+    "react-router-dom": "5.1.1",
     "react-swipeable-views": "^0.13.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.2",
