--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "analyze": "lerna run analyze --parallel"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "4.4.3",
     "@material-ui/icons": "4.4.3",
+    "@material-ui/pickers": "^3.2.6",
     "@material-ui/styles": "^4.4.3",
     "@sweetalert/with-react": "0.1.1",
     "axios": "0.19.0",
     "axios-extensions": "3.0.6",
     "classnames": "2.2.6",
     "connected-react-router": "6.5.2",
+    "date-fns": "^2.0.0-beta.5",
     "guest": "file:packages/guest",
     "host": "file:packages/host",
     "lodash": "4.17.11",
