--- a/packages/guest/package.json
+++ b/packages/guest/package.json
@@ -10,8 +10,6 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "formik": "^1.3.2",
-    "react-google-maps": "^9.4.5",
-    "yup": "^0.27.0"
+    "react-google-maps": "^9.4.5"
   }
 }
