--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^6.0.0",
     "react-router": "5.1.1",
     "react-router-dom": "5.1.1",
+    "react-sizes": "^2.0.0",
     "react-swipeable-views": "^0.13.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.2",
@@ -88,6 +89,7 @@
     "@types/react-router": "^5.0.1",
     "@types/react-router-dom": "^4.3.2",
     "@types/react-select": "^2.0.8",
+    "@types/react-sizes": "^2.0.0",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/react-test-renderer": "^16.0.3",
     "@types/recharts": "^1.1.1",
