--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "react-cookie": "^4.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16.10.1",
+    "react-id-swiper": "^2.3.2",
     "react-loading": "^2.0.2",
     "react-redux": "^6.0.0",
+    "react-responsive-carousel": "^3.1.50",
     "react-router": "5.1.1",
     "react-router-dom": "5.1.1",
     "react-sizes": "^2.0.0",
