--- a/package.json
+++ b/package.json
@@ -13,44 +13,57 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "4.4.3",
-    "@material-ui/icons": "4.4.3",
-    "@material-ui/pickers": "^3.2.6",
-    "@material-ui/styles": "^4.4.3",
+    "@date-io/moment": "^1.3.5",
+    "@material-ui/core": "4.5.1",
+    "@material-ui/icons": "4.5.1",
+    "@material-ui/pickers": "3.2.7",
+    "@material-ui/styles": "4.5.0",
     "@sweetalert/with-react": "0.1.1",
-    "axios": "0.19.0",
+    "autosuggest-highlight": "^3.1.1",
+    "aws-sdk": "^2.369.0",
+    "axios": "^0.19.0",
     "axios-extensions": "3.0.6",
     "classnames": "2.2.6",
     "connected-react-router": "6.5.2",
     "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.1-rc.13",
+    "google-map-react": "^1.1.1",
     "guest": "file:packages/guest",
     "host": "file:packages/host",
     "lodash": "4.17.11",
     "moment": "2.24.0",
     "music-monkey-client": "file:libs/music-monkey-client",
     "npm-run-all": "4.1.5",
+    "nuka-carousel": "4.5.11",
     "prop-types": "^15.6.2",
     "pusher-js": "5.0.2",
     "query-string": "^6.1.0",
     "react": "16.10.1",
     "react-autosuggest": "^9.3.4",
     "react-avatar-editor": "^11.0.4",
+    "react-beautiful-dnd": "^11.0.3",
     "react-cookie": "^4.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16.10.1",
+    "react-dropzone": "^9.0.0",
+    "react-dropzone-component": "^3.2.0",
+    "react-google-maps": "^9.4.5",
     "react-id-swiper": "^2.3.2",
     "react-loading": "^2.0.2",
+    "react-places-autocomplete": "^7.0.1",
     "react-redux": "^6.0.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
+    "react-select": "^2.1.1",
     "react-sizes": "^2.0.0",
     "react-swipeable-views": "^0.13.0",
+    "recharts": "^1.4.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "source-map-explorer": "^2.1.0",
+    "spotify-uri": "^1.0.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^8.11.1",
     "sweetalert2-react-content": "^1.0.1",
@@ -103,7 +116,7 @@
     "enzyme-adapter-react-16": "^1.7.0",
     "lerna": "^3.6.0",
     "node-sass": "^4.11.0",
-    "react-scripts": "3.1.2",
+    "react-scripts": "3.2.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "sinon": "^7.1.1",
     "typescript": "3.6.3"
