--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "aws-sdk": "^2.369.0",
     "axios": "^0.19.0",
     "axios-extensions": "3.0.6",
+    "axios-retry": "^3.1.2",
     "classnames": "2.2.6",
     "connected-react-router": "6.5.2",
     "date-fns": "^2.0.0-beta.5",
     "formik": "^2.0.1-rc.13",
-    "google-map-react": "^1.1.1",
+    "google-map-react": "1.1.5",
     "guest": "file:packages/guest",
     "host": "file:packages/host",
+    "konva": "^4.0.16",
     "lodash": "4.17.11",
     "moment": "2.24.0",
     "music-monkey-client": "file:libs/music-monkey-client",
@@ -45,10 +47,12 @@
     "react-cookie": "^4.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16.10.1",
-    "react-dropzone": "^9.0.0",
+    "react-dropzone": "10.1.10",
     "react-dropzone-component": "^3.2.0",
     "react-google-maps": "^9.4.5",
     "react-id-swiper": "^2.3.2",
+    "react-image-crop": "^8.4.0",
+    "react-image-file-resizer": "^0.2.1",
     "react-loading": "^2.0.2",
     "react-places-autocomplete": "^7.0.1",
     "react-redux": "^6.0.0",
@@ -96,6 +100,7 @@
     "@types/react-beautiful-dnd": "^11.0.2",
     "@types/react-copy-to-clipboard": "^4.2.5",
     "@types/react-dom": "^16.8.4",
+    "@types/react-image-crop": "^8.1.2",
     "@types/react-jss": "^8.6.0",
     "@types/react-places-autocomplete": "^7.2.1",
     "@types/react-redux": "^7.0.9",
