--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "analyze": "lerna run analyze --parallel"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.3.11",
     "@date-io/moment": "^1.3.5",
     "@material-ui/core": "4.5.1",
     "@material-ui/icons": "4.5.1",
@@ -26,12 +25,10 @@
     "axios-retry": "^3.1.2",
     "classnames": "2.2.6",
     "connected-react-router": "6.5.2",
-    "date-fns": "^2.0.0-beta.5",
-    "formik": "^2.0.1-rc.13",
+    "formik": "^2.0.3",
     "google-map-react": "1.1.5",
     "guest": "file:packages/guest",
     "host": "file:packages/host",
-    "konva": "^4.0.16",
     "lodash": "4.17.11",
     "moment": "2.24.0",
     "music-monkey-client": "file:libs/music-monkey-client",
@@ -50,9 +47,6 @@
     "react-dropzone": "10.1.10",
     "react-dropzone-component": "^3.2.0",
     "react-google-maps": "^9.4.5",
-    "react-id-swiper": "^2.3.2",
-    "react-image-crop": "^8.4.0",
-    "react-image-file-resizer": "^0.2.1",
     "react-loading": "^2.0.2",
     "react-places-autocomplete": "^7.0.1",
     "react-redux": "^6.0.0",
@@ -100,7 +94,6 @@
     "@types/react-beautiful-dnd": "^11.0.2",
     "@types/react-copy-to-clipboard": "^4.2.5",
     "@types/react-dom": "^16.8.4",
-    "@types/react-image-crop": "^8.1.2",
     "@types/react-jss": "^8.6.0",
     "@types/react-places-autocomplete": "^7.2.1",
     "@types/react-redux": "^7.0.9",
