--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "4.17.11",
     "moment": "2.24.0",
     "music-monkey-client": "file:libs/music-monkey-client",
+    "notistack": "^0.9.5",
     "npm-run-all": "4.1.5",
     "nuka-carousel": "4.5.11",
     "prop-types": "^15.6.2",
