--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "@types/react": "^16.8.17",
     "@types/react-autosuggest": "^9.3.4",
     "@types/react-avatar-editor": "^10.3.2",
-    "@types/react-beautiful-dnd": "^11.0.2",
+    "@types/react-beautiful-dnd": "11.0.3",
     "@types/react-copy-to-clipboard": "^4.2.5",
     "@types/react-dom": "^16.8.4",
     "@types/react-jss": "^8.6.0",
