--- a/package.json
+++ b/package.json
@@ -111,10 +111,13 @@
     "@types/sinon": "^7.0.0",
     "@types/uuid": "^3.4.4",
     "@types/yup": "^0.26.2",
+    "babel-plugin-import": "^1.12.2",
+    "customize-cra": "^0.8.0",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.7.0",
     "lerna": "^3.6.0",
     "node-sass": "^4.11.0",
+    "react-app-rewired": "^2.1.5",
     "react-scripts": "3.2.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "sinon": "^7.1.1",
