--- a/packages/guest/package.json
+++ b/packages/guest/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local' react-scripts start",
-    "start:local": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local-dev' REACT_APP_MM_API_URL='http://localhost:8080/api/v1' react-scripts start",
-    "build": "NODE_ENV='production' react-scripts build",
-    "test": "react-scripts  test --env=jsdom --coverage",
+    "start": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local' react-app-rewired start",
+    "start:local": "NODE_ENV='development' REACT_APP_AUTH_SUFFIX='-local-dev' REACT_APP_MM_API_URL='http://localhost:8080/api/v1' react-app-rewired start",
+    "build": "NODE_ENV='production' react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom --coverage",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   }
 }
