--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -5,5 +5,5 @@
     "baseUrl": "./src"
   },
   "exclude": ["./src/setupTests.ts"],
-  "include": ["./src"]
+  "include": ["./src", "config-overrides.js"]
 }
