--- a/libs/mm-shared/package.json
+++ b/libs/mm-shared/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "music-monkey-client",
-  "version": "0.0.4",
-  "description": "Client for interacting with MusicMokey api.'",
+  "name": "mm-shared",
+  "version": "0.0.1",
+  "description": "Stuff common to guest and host.",
   "author": "Ruairi O Brien <ruairitobrien@gmail.com>",
   "homepage": "https://github.com/ruairitobrien/music-monkey#readme",
   "license": "ISC",
