--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "just-debounce-it": "^1.1.0",
     "lodash": "4.17.11",
     "moment": "2.24.0",
-    "music-monkey-client": "file:libs/music-monkey-client",
+    "mm-client": "file:libs/mm-client",
+    "mm-shared": "file:libs/mm-shared",
+    "mm-suggestions": "file:libs/mm-suggestions",
     "notistack": "^0.9.5",
     "npm-run-all": "4.1.5",
     "nuka-carousel": "4.5.11",
