--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "just-debounce-it": "^1.1.0",
     "lodash": "4.17.11",
     "moment": "2.24.0",
-    "mm-client": "file:libs/mm-client",
+    "mm-client": "file:packages/mm-client",
     "mm-shared": "file:packages/mm-shared",
-    "mm-suggestions": "file:libs/mm-suggestions",
+    "mm-suggestions": "file:packages/mm-suggestions",
     "notistack": "^0.9.5",
     "npm-run-all": "4.1.5",
     "nuka-carousel": "4.5.11",
@@ -141,7 +141,6 @@
     ]
   },
   "workspaces": [
-    "libs/*",
     "packages/*"
   ]
 }
