--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": ["packages/*"],
+  "version": "independent",
   "command": {
     "publish": {
       "ignoreChanges": ["*.md"]
