--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -8,5 +8,11 @@
     "build": "NODE_ENV='production' react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom --coverage",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
+  },
+  "peerDependencies": {
+    "mm-shared": "*"
+  },
+  "devDependencies": {
+    "mm-shared": "*"
   }
 }
