--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -5,5 +5,5 @@
     "baseUrl": "./src"
   },
   "exclude": ["./src/setupTests.ts"],
-  "include": ["./src", "config-overrides.js", "../mm-shared/src/loading"]
+  "include": ["./src", "config-overrides.js"]
 }
