--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -5,5 +5,9 @@
     "baseUrl": "./src"
   },
   "exclude": ["./src/setupTests.ts"],
-  "include": ["./src", "config-overrides.js"]
+  "include": [
+    "./src",
+    "config-overrides.js",
+    "../mm-shared/src/user/userClient.ts"
+  ]
 }
