Moved utils to shared

--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -8,6 +8,7 @@
   "include": [
     "./src",
     "config-overrides.js",
-    "../mm-shared/src/user/userClient.ts"
+    "../mm-shared/src/user/userClient.ts",
+    "../mm-shared/src/util"
   ]
 }
