--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dropzone": "10.1.10",
     "react-dropzone-component": "^3.2.0",
     "react-google-maps": "^9.4.5",
+    "react-image": "^2.2.2",
     "react-places-autocomplete": "^7.0.1",
     "react-redux": "^6.0.0",
     "react-router": "5.1.2",
