Moved so many things

--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -9,6 +9,7 @@
     "./src",
     "config-overrides.js",
     "../mm-shared/src/event/header/EventResponseMenu.tsx",
-    "../mm-shared/src/event/header/ProfileImage.tsx"
+    "../mm-shared/src/event/header/ProfileImage.tsx",
+    "../mm-shared/src/event/eventSelect/EventSelect.tsx"
   ]
 }
