--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@date-io/moment": "^1.3.5",
     "@material-ui/core": "4.8.0",
     "@material-ui/icons": "4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.41",
     "@material-ui/pickers": "3.2.7",
     "@material-ui/styles": "4.7.1",
     "@sweetalert/with-react": "0.1.1",
