Added map and updated loader

--- a/packages/guest/tsconfig.json
+++ b/packages/guest/tsconfig.json
@@ -5,5 +5,10 @@
     "baseUrl": "./src"
   },
   "exclude": ["./src/setupTests.ts"],
-  "include": ["./src", "config-overrides.js"]
+  "include": [
+    "./src",
+    "config-overrides.js",
+    "../mm-shared/src/event/details/GoogleMapView.tsx",
+    "../mm-shared/src/event/details/EventLocation.tsx"
+  ]
 }
