--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-router-dom": "5.1.2",
     "react-select": "^2.1.1",
     "react-sizes": "^2.0.0",
-    "react-swipeable-views": "^0.13.0",
+    "react-swipeable-views": "0.13.9",
     "recharts": "^1.4.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.2",
