Auto accept notifications

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "start": "lerna run start --parallel",
-    "start:local": "lerna run start:local --parallel",
+    "start:local": "HTTPS=false lerna run start:local --parallel",
     "start:host": "lerna run start --scope host --stream",
-    "start:host:local": "lerna run start:local --scope host --stream",
+    "start:host:local": "HTTPS=false lerna run start:local --scope host --stream",
     "start:guest": "lerna run --scope guest --stream",
-    "start:guest:local": "lerna run start:local --scope guest --stream",
+    "start:guest:local": "HTTPS=false lerna run start:local --scope guest --stream",
     "build": "lerna run build --parallel",
     "test": "lerna run test --stream --",
     "clean": "lerna clean",
