--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -5,11 +5,5 @@
     "baseUrl": "./src"
   },
   "exclude": ["./src/setupTests.ts"],
-  "include": [
-    "./src",
-    "config-overrides.js",
-    "../mm-shared/src/location/MapComponent.tsx",
-    "../mm-shared/src/location/Marker.tsx",
-    "../mm-shared/src/location/LocationAutoComplete.tsx"
-  ]
+  "include": ["./src", "config-overrides.js"]
 }
