--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "@date-io/moment": "^1.3.5",
-    "@material-ui/core": "4.8.0",
+    "@material-ui/core": "4.9.9",
     "@material-ui/icons": "4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.41",
-    "@material-ui/pickers": "3.2.7",
-    "@material-ui/styles": "4.7.1",
+    "@material-ui/lab": "4.0.0-alpha.48",
+    "@material-ui/pickers": "3.2.10",
+    "@material-ui/styles": "4.9.6",
     "autosuggest-highlight": "^3.1.1",
     "aws-sdk": "^2.369.0",
     "axios": "^0.19.0",
