--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-select": "^2.1.1",
     "react-sizes": "^2.0.0",
     "react-swipeable-views": "0.13.9",
+    "react-twitch-embed-video": "^2.0.2",
     "recharts": "^1.4.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.2",
