--- a/packages/mm-shared/package.json
+++ b/packages/mm-shared/package.json
@@ -3,8 +3,5 @@
   "version": "0.0.1",
   "description": "Stuff common to guest and host.",
   "author": "Ruairi O Brien <ruairitobrien@gmail.com>",
-  "main": "src/",
-  "peerDependencies": {
-    "typescript": "3.6.4"
-  }
+  "main": "src/"
 }
