--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@material-ui/core": "4.9.12",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.51",
-    "@material-ui/pickers": "3.2.10",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "4.9.10",
     "autosuggest-highlight": "^3.1.1",
     "aws-sdk": "^2.369.0",
