--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dropzone": "10.1.10",
     "react-dropzone-component": "^3.2.0",
     "react-image": "^2.2.2",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-places-autocomplete": "^7.0.1",
     "react-redux": "^6.0.0",
     "react-router": "5.1.2",
